# HPC-starter-kit

./: .gitignore  GETTING_STARTED.md  README.md  basic_bechmark_job.pbs  cpu_job.pbs  ddp_cnn_job.pbs  ddp_cnn_wandb_job.pbs  gpu_job.pbs  install.sh  pyproject.toml
scripts/: ddp_cnn.py  ddp_cnn_wandb.py
test/: basic_bechmark.py
